style.css
@import url('https://fonts.googleapis.com/css2?family=Spartan:wght@400;500;700&display=swap');
*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

html{
    font-size: 15px;
    font-family: Spartan, sans-serif;
}


/*
@media (min-width: 992px){
    body{
    background-image: url(images/bg-pattern-top-desktop.svg), url(images/bg-pattern-bottom-desktop.svg);
    background-position: left top, right bottom;
    background-repeat: no-repeat;
    background-size: 30%, 50%;
    margin: 0 120px;
}
}
*/


        body{
            background-image: url(images/bg-pattern-top-mobile.svg), url(images/bg-pattern-bottom-mobile.svg);
            background-position: left top, right bottom;
            background-repeat: no-repeat;
            background-size: 70% 80%;
            margin: 0 50px;
            width: 100vw;
            height: 100vh;

            
        }
    
    


h2{
    color: hsl(300, 43%, 22%);
    margin-top: 70px;
    margin-bottom: 10px;
    font-size: 1.8em;
    text-align: center;
    
}

.header > p{
    
    width: 80%;
    font-weight: 300;
    font-size: 0.8em;
    color: hsl(303, 10%, 53%);
    line-height: 1.5;
    text-align: center;
    margin-bottom: 10px;
    margin-left: 50px;
}

.ratings > div{
    background-color: hsl(300, 24%, 96%);
    border: 1px solid hsl(300, 24%, 96%);
    border-radius: 3px;
    width: 80%;
    height: 45px;
    padding: 8px;
    margin-top: 5px;
    text-align: center;
    margin: 10px auto;
}

.ratings > div > span {
    margin-left: 8px;
    color: hsl(333, 80%, 67%);
    font-weight: 700;
    font-size: 0.9em;
}

.container-2{

    display: flex;
    flex-wrap: wrap;
    margin: 0px 30px;
    

}

/*
@media (max-width: 776px){
    .container-2{
        flex-wrap: wrap;
    }
}
*/

div.card{
    max-width:  width: 25%;
    margin: 35px 5px 10px 5px;
    height: 30%;
    border: 1px solid hsl(300, 43%, 22%);
    border-radius: 8px;
    background-color: hsl(300, 43%, 22%);  
    padding: 15px;
    
}


section > .card{
/*    flex-basis: 25%;*/
/*    height: fit-content;*/
    
}

section > .card > img{
    border: 1px solid hsl(300, 43%, 22%);
    border-radius: 50px;
    width: 40px;
    margin-top: 10px;
}

section > .card > h4{
    color: hsl(300, 24%, 96%);
    font-size: 0.9em;
    font-weight: lighter;
    
    
}

section > .card > h4> span{
    color: hsl(333, 80%, 67%);
}

div.card p{
    color: hsl(300, 24%, 96%);
}

